--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
                         </div>
                         <!-- Certification 3-->
                         <div class="qualification__item">
-                            <h3 class="qualification__title">Cisco Networking Academy by JavaScript Essentials</h3>
-                            <span class="qualification__date">2023</span>
+                            <h3 class="qualification__title">Generative AI Productivity
+ Skills with Microsoft and LinkedIn
+ Build Your Generative AI Productivity
+ Skills with Microsoft and LinkedIn </h3>
+                            <span class="qualification__date">2024</span>
                         </div>
                         <!-- Certification 4-->
                         <div class="qualification__item">
