--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <p class="contact__info-text">LinkedIn</p>
             </div>
             <div class="contact__info-item">
-                <a href="https://github.com/Hunt-03" class="contact__info-link" target="_blank">
+                <a href="https://github.com/Sriraj-03" class="contact__info-link" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
                 <p class="contact__info-text">GitHub</p>
