--- a/index.html
+++ b/index.html
@@ -168,7 +168,12 @@
                             <h3 class="qualification__title">NPTEL Certificate in Digital Circuits</h3>
                             <span class="qualification__date">2022</span>
                         </div>
-                        <!-- Certification 3-->
+                         <!-- Certification 3-->
+                        <div class="qualification__item">
+                            <h3 class="qualification__title">Automation Developer by UiPath Academy</h3>
+                            <span class="qualification__date">2024</span>
+                        </div>
+                        <!-- Certification 4-->
                         <div class="qualification__item">
                             <h3 class="qualification__title">Generative AI Productivity
  Skills with Microsoft and LinkedIn
@@ -178,9 +183,12 @@
                         </div>
                         <!-- Certification 4-->
                         <div class="qualification__item">
-                            <h3 class="qualification__title">Automation Developer by UiPath Academy</h3>
+                            <h3 class="qualification__title">Career Essentials 
+in Software Development
+by Microsoft and LinkedIn </h3>
                             <span class="qualification__date">2024</span>
                         </div>
+                       
                     </div>
                 </div>
                 <!--============== Education ============-->
